# internal/server/grpc.go
@@ -11,7 +11,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, rules *service.RuleGoService, runLogs *service.RunLogService, components *service.ComponentService, admin *service.AdminService, chat *service.ChatService, taskService *service.TaskBoardService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, rules *service.RuleGoService, runLogs *service.RunLogService, components *service.ComponentService, admin *service.AdminService, chat *service.ChatService, taskService *service.TaskBoardService, scheduledTasks *service.ScheduledTaskService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -34,5 +34,6 @@ func NewGRPCServer(c *conf.Server, rules *service.RuleGoService, runLogs *servic
 	v1.RegisterChatServer(srv, chat)
 	v1.RegisterTaskBoardServiceServer(srv, taskService)
 	v1.RegisterServiceManagementServiceServer(srv, taskService)
+	v1.RegisterScheduledTaskServiceServer(srv, scheduledTasks)
 	return srv
 }
